# PyAPI-RTS

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
docs/: class_extractor_usage.rst  component_builder_format.rst  component_extensions.rst  conf.py  connection_graph.rst  dfx_files.rst  examples.rst  extension_hooks.rst  getting_started.rst  glossary.rst  index.rst  overview.rst
docs/apidoc/: modules.rst  pyapi_rts.api.lark.rst  pyapi_rts.api.parameters.rst  pyapi_rts.api.rst  pyapi_rts.class_extractor.extracted.rst  pyapi_rts.class_extractor.generators.rst  pyapi_rts.class_extractor.hooks.rst  pyapi_rts.class_extractor.readers.blocks.rst  pyapi_rts.class_extractor.readers.lines.rst  pyapi_rts.class_extractor.readers.rst  pyapi_rts.class_extractor.rst  pyapi_rts.rst  pyapi_rts.shared.rst
examples/aggregation/: aggregation.ipynb  kit_aggregation.dfx  kit_aggregation_grouped.dfx
examples/bus_coloring/: bus_coloring.ipynb  ieee14.dfx  ieee_out_new.dfx
examples/simple_example/: simple_example.ipynb  test.dfx
pyapi_rts/: __init__.py  tools.py
pyapi_rts/api/: __init__.py  component.py  component_box.py  container.py  draft.py  enumeration.py  graph.py  group.py  hierarchy.py  subsystem.py
pyapi_rts/class_extractor/: __init__.py  component_tags.txt  enum_hash_pool.py  enum_pool.txt  graphics_parsing.py  main.py  utils.py
pyapi_rts/shared/: __init__.py  bounding_box.py  component_hook.py  condition_tree.py  node_type.py  parameter_bound_property.py  parameter_condition.py  stretchable.py
tests/: graph_visualization.py
(+203 files in other folders)
